<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <groupId>io.stubbs.truth</groupId>
    <artifactId>truth-generator-parent</artifactId>
    <version>0.1-SNAPSHOT</version>

    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>

    <name>${project.name.root}</name>
    <description>Code generator to create Subject files with both auto generated assertions methods and the ability to
        maintain user created assertions using the Grandfather pattern.
    </description>
    <url>github.com/astubbs/truth-generator</url>
    <inceptionYear>2021</inceptionYear>

    <organization>
        <name>Stubbs.io</name>
        <url>github.com/astubbs</url>
    </organization>

    <developers>
        <developer>
            <name>Antony Stubbs</name>
            <email>antony.stubbs@gmail.com</email>
        </developer>
    </developers>

    <issueManagement>
        <url>https://github.com/astubbs/truth-generator/issues</url>
        <system>GitHub</system>
    </issueManagement>
    <mailingLists>
        <mailingList>
            <archive>https://github.com/astubbs/truth-generator/discussions</archive>
        </mailingList>
    </mailingLists>

    <scm>
        <url>https://github.com/astubbs/truth-generator.git</url>
    </scm>

    <properties>
        <project.name.root>Truth Subject Generator</project.name.root>

        <version.roaster>2.23.0.Final</version.roaster>
        <version.truth>1.1.3</version.truth>
        <lombok.version>1.18.20</lombok.version>
    </properties>

    <modules>
        <module>generator</module>
        <module>generator-assertions-tests</module>
        <module>plugin-maven</module>
    </modules>

    <dependencies>
        <dependency>
            <groupId>com.google.truth</groupId>
            <artifactId>truth</artifactId>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <!-- Internal -->
            <dependency>
                <groupId>io.stubbs.truth</groupId>
                <artifactId>truth-generator</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.stubbs.truth</groupId>
                <artifactId>truth-generator</artifactId>
                <version>${project.version}</version>
                <scope>test</scope>
                <type>test-jar</type>
            </dependency>

            <!-- Truth -->
            <dependency>
                <groupId>com.google.truth</groupId>
                <artifactId>truth</artifactId>
                <scope>compile</scope>
                <version>${version.truth}</version>
            </dependency>
            <dependency>
                <!-- Used to generate Java 8 chains for users that use them -->
                <groupId>com.google.truth.extensions</groupId>
                <artifactId>truth-java8-extension</artifactId>
                <scope>compile</scope>
                <version>${version.truth}</version>
            </dependency>


            <!-- External -->
            <dependency>
                <groupId>org.jboss.forge.roaster</groupId>
                <artifactId>roaster-api</artifactId>
                <version>${version.roaster}</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.forge.roaster</groupId>
                <artifactId>roaster-jdt</artifactId>
                <version>${version.roaster}</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>org.checkerframework</groupId>
                <artifactId>checker-compat-qual</artifactId>
                <version>2.5.5</version>
            </dependency>
            <dependency>
                <groupId>org.atteo</groupId>
                <artifactId>evo-inflector</artifactId>
                <version>1.3</version>
            </dependency>
            <dependency>
                <groupId>org.reflections</groupId>
                <artifactId>reflections</artifactId>
                <version>0.10.2</version>
            </dependency>
            <!-- reflections optional dependency -->
            <dependency>
                <groupId>org.dom4j</groupId>
                <artifactId>dom4j</artifactId>
                <version>2.1.1</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>3.12.0</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>30.1.1-android</version>
            </dependency>
            <dependency>
                <groupId>com.google.flogger</groupId>
                <artifactId>flogger</artifactId>
                <version>0.6</version>
            </dependency>
            <dependency>
                <groupId>com.google.flogger</groupId>
                <artifactId>flogger-log4j2-backend</artifactId>
                <version>0.6</version>
            </dependency>
            <dependency>
                <groupId>com.google.flogger</groupId>
                <artifactId>flogger-system-backend</artifactId>
                <version>0.6</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
            <dependency>
                <groupId>uk.co.jemos.podam</groupId>
                <artifactId>podam</artifactId>
                <version>7.2.7.RELEASE</version>
                <scope>compile</scope>
            </dependency>

            <!-- Testing -->
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>3.18.0</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
            </plugin>
            <plugin>
                <artifactId>maven-jar-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>test-jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <source>11</source>
                        <target>11</target>
                        <encoding>UTF-8</encoding>
                        <fork>true</fork>
                        <compilerArgs>
                            <arg>-XDcompilePolicy=simple</arg>
                            <arg>-Xplugin:ErrorProne</arg>
                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
                        </compilerArgs>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>com.google.errorprone</groupId>
                                <artifactId>error_prone_core</artifactId>
                                <version>2.9.0</version>
                            </path>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.2.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0-M5</version>
                    <configuration>
                        <trimStackTrace>false</trimStackTrace>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>


</project>
